# ibee-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/ibee/: __init__.py  _default_clients.py  client.py  environment.py  reference.md
src/ibee/cloud_vms/: __init__.py  client.py  raw_client.py
src/ibee/cloud_vms/types/: __init__.py
src/ibee/compute_catalog/: __init__.py  client.py  raw_client.py
src/ibee/gpu_vms/: __init__.py  client.py  raw_client.py
src/ibee/gpu_vms/types/: __init__.py  create_gpu_vm_request_os_type.py
src/ibee/object_storage/: client.py  raw_client.py
src/ibee/secret_store/: client.py  raw_client.py
src/ibee/tests/: test_aiohttp_autodetect.py
src/ibee/types/: bucket.py  delete_response.py  error.py  gpu_vm.py  gpu_vm_status.py  network_interface.py  network_interface_status.py  operation_accepted.py  operation_status.py  operation_status_action.py  power_action_request.py  secret.py  secret_list.py  secret_status.py  secret_store_status.py  update_vm_request.py  vm_metrics.py
src/ibeesolutions/: __init__.py  _default_clients.py  client.py  environment.py  reference.md
src/ibeesolutions/cloud_vms/: client.py  raw_client.py
src/ibeesolutions/core/: client_wrapper.py
src/ibeesolutions/errors/: __init__.py
src/ibeesolutions/gpu_vms/: client.py
src/ibeesolutions/object_storage/: client.py
src/ibeesolutions/secret_store/: client.py
src/ibeesolutions/tests/: test_aiohttp_autodetect.py
src/ibeesolutions/types/: __init__.py  attach_network_request.py  bucket_list.py  bucket_summary.py  cloud_vm.py  cloud_vm_status.py  error_detail.py  operation_status_status.py  secret_store.py  secret_store_list.py  secret_value.py
(+1 files in other folders)
