[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibeesolutions"
version = "0.0.1"
description = "Official Python SDK for the IBEE Cloud API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "IBEE Solutions", email = "support@ibee.ai"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://ibee.ai"
Documentation = "https://docs.ibee.co.in/docs/api-reference"
Repository = "https://github.com/IBEE/ibeesolutions-python"

[tool.setuptools.packages.find]
where = ["src"]
