[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibee"
version = "0.1.2"
description = "Official Python SDK for the IBEE Solutions API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "IBEE Solutions", email = "support@ibee.ai"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.21.2",
    "pydantic>=1.9.2",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://ibee.ai"
Documentation = "https://ibee.ai/docs/api-reference"
Repository = "https://github.com/devs-ibee/ibee-python"

[tool.setuptools.packages.find]
where = ["src"]
